--- a/deb_package/connector/DEBIAN/control
+++ b/deb_package/connector/DEBIAN/control
@@ -1,7 +1,7 @@
 Package: connector
 Version: 1.3.23-1
 Provides: connector
-Maintainer: Korneechev E. <ekorneechev@gmail.com>
+Maintainer: Korneechev E. <ek@myconnector.ru>
 Architecture: all
 Section: net
 Description: Инструмент системного администратора.
