--- a/data/connector.desktop
+++ b/data/connector.desktop
@@ -6,4 +6,4 @@ Icon=/usr/share/connector/data/emblem.png
 StartupNotify=true
 Terminal=false
 Type=Application
-Categories=Network;
+Categories=Network;RemoteAccess;
